blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: anaidortega/client
#new object (cluster ip service)
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
    #NOT NECESARY TO WRITE THIS VALUE IS DEFAULT
  type: ClusterIP
  ports:
    - name: client
    #SAME PORT AS POD
      protocol: TCP
      port: 3000
      targetPort: 3000
