blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: anaidortega/comments
#new object (cluster ip service)
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
    #NOT NECESARY TO WRITE THIS VALUE IS DEFAULT
  type: ClusterIP
  ports:
    - name: comments
    #SAME PORT AS POD
      protocol: TCP
      port: 4001
      targetPort: 4001
