blog/infra/k8s/posts-depl.yaml
#THIS IS FOR THE NODE PORT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: anaidortega/posts
#IP SERVICE CONFIGUARTION
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
    #NOT NECESARY TO WRITE THIS VALUE IS DEFAULT
  type: ClusterIP
  ports:
    - name: posts
    #SAME PORT AS POD
      protocol: TCP
      port: 4000
      targetPort: 4000
