blog/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: anaidortega/query
#new object (cluster ip service)
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
    #NOT NECESARY TO WRITE THIS VALUE IS DEFAULT
  type: ClusterIP
  ports:
    - name: query
    #SAME PORT AS POD
      protocol: TCP
      port: 4002
      targetPort: 4002
